V 1 Version quasi-finale : 2 bugs à régler : les textes mangés des vignettes des plats sur la gauche + text-overflow hidden lorsque l'on enlève le curseur des plats

--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,7 @@ $degrade-violet-inverse:linear-gradient(#B274E1, #E69AE0);
 // Annonce des marges et padding et autres mise en forme
 .padding{padding: 1rem;}
 $border-radius-value:15px; .arrondis{border-radius: $border-radius-value;}
-.ombre{box-shadow: 2px 2px 2px rgba(50, 50, 50, 0.15);}
+.ombre{box-shadow: 2px 2px 10px rgba(50, 50, 50, 0.15);}
 
 
 // Annonce des textes et des polices d'écriture
@@ -275,11 +275,11 @@ img{max-width: 100%; @extend .block;}
            a .fa-heart{width: 20px; height: 20px; top: 0.7rem; right: 1.5rem; font-size: 1.5rem;}
         }
 
-        .plats article{
+        .plats article{animation: apparition-article ease 1;
 
-            &:nth-child(1){animation: apparition-article 0.8s ease 1;}
-            &:nth-child(2){animation: apparition-article 1.3s ease 1;}
-            &:nth-child(3){animation: apparition-article 1.8s ease 1;}
+            &:nth-child(1){animation-duration: 0.8s;}
+            &:nth-child(2){animation-duration: 1.3s;}
+            &:nth-child(3){animation-duration: 1.8s;}
 
             h2{text-transform: uppercase;
                 &::after{@extend .block; content: ""; width: 60px; height: 4px; margin-top: 5px; background-color: $tertiaire;}
@@ -287,15 +287,35 @@ img{max-width: 100%; @extend .block;}
 
             .liste-plats{
                 a {
-                    div{@extend .vignette;
+                    div{@extend .vignette; overflow: hidden;
     
-                        .description-plat{@extend .description-vignette;}
-                        span{@extend .absolute; bottom: 1rem; right: 1rem; font-weight: 600;}                                    
+                        .description-plat{@extend .description-vignette; width: 100%; @extend .animer;}
+                        span{@extend .absolute; bottom: 1rem; right: 1rem; font-weight: 600; @extend .animer;}
+                        .validateur{@extend .absolute; top: 0; margin: 0; width: 2rem; height: 43px; right: 0; transform: translateX(100%);
+                            background-color: $tertiaire; border-top-left-radius: 0; border-bottom-left-radius: 0; @extend .animer;
+
+                            i{position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%) rotate(0deg); width: 24px; height: 20px; padding-top: 4px; @extend .alignerCentre;
+                                border-radius: 100%; background-color: $blanc; color: $tertiaire;
+                            }
+                        }
+                        // Animation de l'icône check
+                        @keyframes icone{
+                            100%{transform: translate(-50%, -50%) rotate(360deg);}
+                        }
+
+                        &:hover{
+                            .description-plat{width: 60%; white-space: nowrap; overflow: hidden;}
+                            span{right: 5rem;}
+                            .validateur{transform: translateX(0);
+                                i{animation: icone 0.6s ease 1;}
+                            }
+                        }
                     }
                 }
             }
         }
 
+        // Animation de l'apparition des articles
         @keyframes apparition-article{
             0%{opacity: 0;}
             30%{opacity: 0; transform: translateY(20px);}
